# agents

1_foundations/: 1_lab1.ipynb  4_lab4.ipynb  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb
3_crew/no1_debate/: README.md  pyproject.toml
3_crew/no1_debate/output/: decide_task.md  oppose_task.md  propose_task.md
3_crew/no1_debate/src/no1_debate/: crew.py  main.py
3_crew/no1_debate/src/no1_debate/config/: agents.yaml  tasks.yaml
3_crew/no2_financial_researcher/: README.md  pyproject.toml  report.md
3_crew/no2_financial_researcher/output/: analysis_task.md
3_crew/no2_financial_researcher/src/no2_financial_researcher/: crew.py  main.py
3_crew/no2_financial_researcher/src/no2_financial_researcher/config/: agents.yaml  tasks.yaml
3_crew/no3_stock_picker/: README.md  env.example  pyproject.toml
3_crew/no3_stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/no3_stock_picker/output/: decision.md  research_report.json  trending_companies.json
3_crew/no3_stock_picker/src/no3_stock_picker/: crew.py  main.py
3_crew/no3_stock_picker/src/no3_stock_picker/config/: agents.yaml  tasks.yaml
3_crew/no3_stock_picker/src/no3_stock_picker/tools/: push_tool.py
3_crew/no4_coder/: README.md  pyproject.toml
3_crew/no4_coder/output/: code_and_output.txt
3_crew/no4_coder/src/no4_coder/: crew.py  main.py
3_crew/no4_coder/src/no4_coder/config/: agents.yaml  tasks.yaml
3_crew/no5_engineering_team/: README.md  pyproject.toml
3_crew/no5_engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/no5_engineering_team/src/no5_engineering_team/: crew.py  main.py
3_crew/no5_engineering_team/src/no5_engineering_team/config/: agents.yaml  tasks.yaml
