[project]
name = "no1_debate"
version = "0.1.0"
description = "no1_debate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
no1_debate = "no1_debate.main:run"
run_crew = "no1_debate.main:run"
train = "no1_debate.main:train"
replay = "no1_debate.main:replay"
test = "no1_debate.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
