[project]
name = "no2_financial_researcher"
version = "0.1.0"
description = "no2_financial_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0",
    "langchain-tavily>=0.2.1",
    "pydantic-ai-slim[tavily]>=0.2.16",
]

[project.scripts]
no2_financial_researcher = "no2_financial_researcher.main:run"
run_crew = "no2_financial_researcher.main:run"
train = "no2_financial_researcher.main:train"
replay = "no2_financial_researcher.main:replay"
test = "no2_financial_researcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
