[project]
name = "no3_stock_picker"
version = "0.1.0"
description = "no3_stock_picker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0",
    "requests>=2.32.4",
]

[project.scripts]
no3_stock_picker = "no3_stock_picker.main:run"
run_crew = "no3_stock_picker.main:run"
train = "no3_stock_picker.main:train"
replay = "no3_stock_picker.main:replay"
test = "no3_stock_picker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
