[project]
name = "no4_coder"
version = "0.1.0"
description = "no4_coder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.46.0",
    "crewai[tools]>=0.126.0,<1.0.0",
]

[project.scripts]
no4_coder = "no4_coder.main:run"
run_crew = "no4_coder.main:run"
train = "no4_coder.main:train"
replay = "no4_coder.main:replay"
test = "no4_coder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
