[project]
name = "no5_engineering_team"
version = "0.1.0"
description = "no5_engineering_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.46.0",
    "crewai[tools]>=0.126.0,<1.0.0",
    "gradio>=5.33.1",
]

[project.scripts]
no5_engineering_team = "no5_engineering_team.main:run"
run_crew = "no5_engineering_team.main:run"
train = "no5_engineering_team.main:train"
replay = "no5_engineering_team.main:replay"
test = "no5_engineering_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
